# gemini-voice-input

./: GEMINI.md  README.md  REPORT.md  design_doc.md  main.py  pyproject.toml  run_voice.sh  test_voice_agent.py  typing_sandbox.py  voice_agent.py  voice_trigger.sh
.squad/: design_doc.md  project.json
.squad/architect/.gemini/: GEMINI.md
.squad/inquisitor/.gemini/: GEMINI.md
.squad/scribe/.gemini/: GEMINI.md
.squad/visionary/.gemini/: GEMINI.md
