[project]
name = "gemini-voice-input"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evdev>=1.9.3",
    "google-generativeai>=0.8.6",
    "keyboard>=0.13.5",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "sounddevice>=0.5.5",
]
